crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__operation_kind_kotlin.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "operation_kind::<Kotlin>()"
---

/// How many times the shell is expected to resolve a request.
enum class OperationKind {
    /// Never — the core is not waiting for an answer.
    NOTIFY,
    /// Exactly once.
    REQUEST,
    /// Any number of times, until the shell stops sending.
    STREAM,
}

/// How many times the shell resolves a request carrying this effect,
/// or `null` when the operation leaves that to the call site.
val Effect.operationKind: OperationKind?
    get() = when (this) {
        is Effect.Render -> OperationKind.NOTIFY
        is Effect.Http -> OperationKind.REQUEST
        is Effect.Subscribe -> OperationKind.STREAM
        is Effect.Legacy -> null
    }
