crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__request_id_kotlin.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "request_id::<Kotlin>()"
---

/// Which effect a request id names.
///
/// `index` is the effect's position in `Effect`, which is what the request
/// id carries.
enum class EffectKind(val index: UByte) {
    RENDER(0u),
    HTTP(1u),
    SUBSCRIBE(2u),
    LEGACY(3u);

    companion object {
        /// The effect at `index`, or `null` if this generated code knows none.
        fun fromIndex(index: UByte): EffectKind? = values().firstOrNull { it.index == index }
    }
}

/// The parts of the id the core issues with every request.
///
/// Resolve with `rawValue`, exactly as it arrived — this is for logging,
/// tracing and assertions. The bit layout is Crux's, so read ids with this
/// rather than picking the integer apart by hand.
data class RequestId(val rawValue: UInt) {
    /// Every notification shares one reserved id, because the core is not
    /// waiting on any of them.
    val isNotification: Boolean
        get() = rawValue == 0u

    /// Which effect this request carries — `null` for a notification, whose
    /// id names none, and for an id naming an effect this generated code
    /// does not know.
    val effectKind: EffectKind?
        get() = if (isNotification) null
        else EffectKind.fromIndex((rawValue shr 24).toUByte())

    /// How many times the core expects this request to be resolved.
    val operationKind: OperationKind
        get() = when {
            isNotification -> OperationKind.NOTIFY
            (rawValue and 0x800000u) == 0u -> OperationKind.REQUEST
            else -> OperationKind.STREAM
        }

    /// The ascending number the request was issued with. Zero for a
    /// notification, the one id that is not sequenced.
    val sequence: UInt
        get() = rawValue and 0x7fffffu
}
