crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__request_kind_csharp.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "request_kind::<CSharp>()"
---

/// <summary>
/// How many times the shell resolves a request carrying this effect,
/// or <c>null</c> when the operation leaves that to the call site.
/// </summary>
public Shared.RequestKind? RequestKind => this switch
{
    Shared.Effect.Render => Shared.RequestKind.Notify,
    Shared.Effect.Http => Shared.RequestKind.Request,
    Shared.Effect.Subscribe => Shared.RequestKind.Stream,
    Shared.Effect.Legacy => null,
    _ => null,
};

/// <summary>
/// How many times the shell is expected to resolve a request.
/// </summary>
public enum RequestKind
{
    /// <summary>Never — the core is not waiting.</summary>
    Notify,
    /// <summary>Exactly once.</summary>
    Request,
    /// <summary>Any number of times, until the shell stops sending.</summary>
    Stream
}
